# Dev-CppPro

./: .gitmodules  CMakeLists.txt  README.md  README_CN.md  dcmainwindow.cpp  dcmainwindow.h  main.cpp
Resources/: DCResources.qrc
Src/: main.cpp
Src/FileManager/: dcfilecontroller.cpp  dcfilecontroller.h  dcfilemodel.cpp  dcfilemodel.h
Src/TextManager/: DCFontManager.cpp  DCFontManager.h  DCLineNumberArea.cpp  DCLineNumberArea.h  DCSyntaxHighlighter.cpp  DCSyntaxHighlighter.h  DCTextEdit.cpp  DCTextEdit.h
UI/: DCFileEdit.cpp  DCFileEdit.h  dceditor.cpp  dceditor.h  dcmainwindow.cpp  dcmainwindow.h  dcmenubar.cpp  dcmenubar.h  dcstatus.cpp  dcstatus.h  dw_classdock.cpp  dw_classdock.h  dw_projectdock.cpp  dw_projectdock.h  dw_tooldock.cpp  dw_tooldock.h  initwindow.cpp  initwindow.h
